# rags_ros

./: .gitignore  CMakeLists.txt  base_local_planner_params.yaml  graph_config.yaml  graph_config_distance_only.yaml  graph_config_distribution_only.yaml  package.xml  rags_ros_how_to_run.txt
include/rags_ros/: Makefile  Queue.h  RAGS.h  Search.h  main_RAGS_tester
include/rags_ros/test_config/: cost_distributions0.txt  edges.txt  edges0.txt  path_cost_Greedy0.txt  path_cost_Optimal0.txt  path_cost_SampledAstar0.txt  true_costs0.txt  vertices.txt  vertices0.txt
launch/: generic_rags_planner.launch  move_base_vel_throttle.launch  rags_planner.launch  rags_planner_config.launch  rags_planner_dji.launch
msg/: EdgeCosts.msg  PathCost.msg
src/: edge_cost_publisher.cpp  edge_cost_publisher.h  rags_planner.cpp  rags_planner.h  rags_planner_dji.cpp  rags_planner_dji.h  speed_regulator.cpp  speed_regulator.h
test_config/: edge_distances.xlsx
